--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ repositories {
 }
 
 dependencies {
-    // compile group: 'junit', name: 'junit', version: '4.12'
-    compile group: 'org.testng', name: 'testng', version: '7.1.0'
     implementation 'org.seleniumhq.selenium:selenium-java:3.141.59'
+    compile group: 'org.testng', name: 'testng', version: '7.1.0'
+    compile 'org.hamcrest:hamcrest:2.2'
 }
