--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ repositories {
 
 dependencies {
     implementation 'org.seleniumhq.selenium:selenium-java:3.141.59'
-    compile group: 'org.testng', name: 'testng', version: '7.1.0'
-    compile 'org.hamcrest:hamcrest:2.2'
+    implementation group: 'org.testng', name: 'testng', version: '7.1.0'
+    implementation 'org.hamcrest:hamcrest:2.2'
+    implementation 'com.beust:jcommander:1.78'
 }
