--- a/src/test/java/cat_tests/conf/test.properties
+++ b/src/test/java/cat_tests/conf/test.properties
@@ -1,6 +1,6 @@
 # browser
 browser.type = chrome
-browser.startMaximized = true
+browser.maximized = true
 
 # cat
 cat.url = https://catalog-administration-tool-gogol.web-dev.cardsmobile.ru/catalog
